# JpegX

./: README.md  build.gradle  settings.gradle
JepgTurbo/: build.gradle
JepgTurbo/src/androidTest/java/com/xlu/jepgturbo/: ExampleInstrumentedTest.kt
JepgTurbo/src/main/: AndroidManifest.xml
JepgTurbo/src/main/cpp/: CMakeLists.txt  main.cpp
JepgTurbo/src/main/cpp/include/: logcat.h
JepgTurbo/src/main/cpp/jpeghelper/: JpegHelper.cpp  JpegHelper.h
JepgTurbo/src/main/cpp/utils/: JniUtil.cpp  JniUtil.h  logcat.h
JepgTurbo/src/main/java/com/xlu/jepgturbo/: CompressFormat.kt  CompressListener.kt  Compressor.kt  Formats.kt  JepgTurbo.kt  JpegTurbo.kt  JpegX.kt
JepgTurbo/src/main/java/com/xlu/jepgturbo/entitys/: CompressFormat.kt  CompressParams.kt  OutputFormat.kt
JepgTurbo/src/main/java/com/xlu/jepgturbo/itf/: CompressListener.kt
JepgTurbo/src/main/java/com/xlu/jepgturbo/utils/: BitmapUtil.kt  CommonUtils.kt  FileUtil.kt  JpegNative.kt
JepgTurbo/src/test/java/com/xlu/jepgturbo/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/xlu/compress/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xlu/compress/: MainActivity.kt
app/src/main/java/com/xlu/compress/utils/: BitmapUtil.kt  CommonFileUtil.kt  FileSizeUtil.java  (+2 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: apk_path.xml
app/src/test/java/com/xlu/compress/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
